k8s/v1.36.2/configs/argo-templates/clusters/dev/sample-app/kubernetes-objects/virtualService.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: <app>-virtual-service
  namespace: hello-kubernetes
spec:
  hosts: ["<app>.maifuj.com"]
  gateways: ["istio-ingress/gateway-https"]
  http:
    - route:
        - destination:
            host: <app-svc>
            port: {number: 8080}
